Fixed display to not overflow if there more input numbers

--- a/style.css
+++ b/style.css
@@ -41,15 +41,22 @@ height: 30%;
 color: white;
 display: flex;
 flex-direction: column;
+justify-content: center;
 padding: 20px;
+
 }
 
 #display{
 text-align: end;
+text-overflow: clip;
 font-size: 65px;
 font-weight: lighter;
 height: 90px;
-white-space: nowrap; 
+overflow: hidden;
+white-space: nowrap; /* Prevent text wrapping */
+width: 250px;
+
+
 }
 
 #result{
